# FLGPT

./: README.md  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  index.html  main.js  main.jsx  preload.js  renderer.js
src/services/: gptService.js
vst_plugin/: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md  SUMMARY.md
vst_plugin/Source/: AnthropicService.cpp  AnthropicService.h  ChatComponent.cpp  ChatComponent.h  LLMService.cpp  LLMService.h  MIDIGenerator.cpp  MIDIGenerator.h  OpenAIService.cpp  OpenAIService.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SessionState.cpp  SessionState.h
